feat/정적 팩토리 메서드를 위한 접근제어 반영